[package]
name = "sortn"
version = "1.0.0"
authors = ["Dorian Meric"]
repository = "https://github.com/dorianmeric/sortn"
license = "MIT"
description = "natural sort CLI"
readme = "README.md"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
natord = "1.0.9"
rand = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

[[bin]]
name = "sortn"
path = "src/main.rs"
